crates/swc/tests/tsc-references/classExtendsItself_es5.1.normal.js
import _class_call_check from "@swc/helpers/src/_class_call_check.mjs";
import _inherits from "@swc/helpers/src/_inherits.mjs";
import _create_super from "@swc/helpers/src/_create_super.mjs";
var C = /*#__PURE__*/ function(C1) {
    "use strict";
    _inherits(C, C1);
    var _super = _create_super(C);
    function C() {
        _class_call_check(this, C);
        return _super.apply(this, arguments);
    }
    return C;
} // error
(C);
var D = /*#__PURE__*/ function(D1) {
    "use strict";
    _inherits(D, D1);
    var _super = _create_super(D);
    function D() {
        _class_call_check(this, D);
        return _super.apply(this, arguments);
    }
    return D;
} // error
(D);
var E = /*#__PURE__*/ function(E1) {
    "use strict";
    _inherits(E, E1);
    var _super = _create_super(E);
    function E() {
        _class_call_check(this, E);
        return _super.apply(this, arguments);
    }
    return E;
} // error
(E);
